--- a/src/main/resources/templates/mail/created-trello-card-mail.html
+++ b/src/main/resources/templates/mail/created-trello-card-mail.html
@@ -95,13 +95,16 @@
                             <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                                 <tr>
                                     <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;">
-                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Dear <span th:text="${admin_name}"></span></p>
+                                        <p th:if="${is_friend}" style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
+                                            Yo <span th:text="${admin_config.getAdminName()}"></span></p>
+                                        <p th:unless="${is_friend}" style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
+                                            Dear <span th:text="${admin_config.getAdminName()}"></span></p>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;" th:text="${message}"></p>
                                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; box-sizing: border-box;">
                                             <tbody>
                                             <tr>
                                                 <td align="left" style="font-family: sans-serif; font-size: 14px; vertical-align: top; padding-bottom: 15px;">
-                                                    <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
+                                                    <table th:if="${show_button}" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
                                                         <tbody>
                                                         <tr>
                                                             <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #3498db; border-radius: 5px; text-align: center;"> <a th:href="${task_url}" th:text="${button}" target="_blank" style="display: inline-block; color: #ffffff; background-color: #3498db; border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-transform: capitalize; border-color: #3498db;" ></a> </td>
@@ -112,8 +115,14 @@
                                             </tr>
                                             </tbody>
                                         </table>
+                                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">
+                                            Application functionality:
+                                        </p>
+                                        <ul th:each="function : ${application_functionality}">
+                                            <li th:text="${function}"></li>
+                                        </ul>
                                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">We are grateful for using our application!<br>
-                                            Owner <span th:text="${company_owner}"></span>
+                                            Owner <span th:text="${company_config.getOwner()}"></span>
 
                                         </p>
                                     </td>
@@ -130,16 +139,15 @@
                     <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;">
                         <tr>
                             <br class="content-block" style="font-family: sans-serif; vertical-align: top; padding-bottom: 10px; padding-top: 10px; font-size: 12px; color: #999999; text-align: center;">
-                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;" th:text="${company_name}"></span>
+                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;" th:text="${company_config.getCompanyName()}"></span>
                                 <br>
-                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;" th:text="${company_address_street}"> </span>
-                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;" th:text="${company_address_number}"></span>
+                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;" th:text="${company_config.getAddress()}"> </span>
                                 <br>
-                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">E-mail: <span th:text="${company_email}"></span></span>
+                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: center;">E-mail: <span th:text="${company_config.getCompanyEmail()}"></span></span>
                                 <br>
-                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: -moz-left;">Phone number: <span th:text="${company_phone}"></span></span>
+                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: -moz-left;">Phone number: <span th:text="${company_config.getCompanyPhone()}"></span></span>
                                 <br>
-                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: -moz-right;" th:text="${company_goal}"></span>
+                                <span class="apple-link" style="color: #999999; font-size: 12px; text-align: -moz-right;" th:text="${company_config.getCompanyGoal()}"></span>
 
                             </td>
                         </tr>
